REGRESSION(r229484): Plugins often require CGS Connections to draw https://bugs.webkit.org/show_bug.cgi?id=183663 <rdar://problem/38439218>

Reviewed by Per Arne Vollan.

Flash requires an active CGSConnection to work properly. Since we don't want the WebContent
process to have on, create a new plugin process-specific layer host creation method that
gives this access.

* Platform/mac/LayerHostingContext.h:
* Platform/mac/LayerHostingContext.mm:
(WebKit::LayerHostingContext::createForExternalPluginHostingProcess): Added.
* PluginProcess/mac/PluginControllerProxyMac.mm:
(WebKit::PluginControllerProxy::updateLayerHostingContext): Use the new creation
method.


Canonical link: https://commits.webkit.org/199309@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229629 268f45cc-cd09-0410-ab3c-d52691b4dbfc