Source/WebKit/PluginProcess/mac/PluginControllerProxyMac.mm
@@ -130,7 +130,7 @@ void PluginControllerProxy::updateLayerHostingContext(LayerHostingMode layerHost
             break;
 #if HAVE(OUT_OF_PROCESS_LAYER_HOSTING)
         case LayerHostingMode::OutOfProcess:
-            m_layerHostingContext = LayerHostingContext::createForExternalHostingProcess();
+            m_layerHostingContext = LayerHostingContext::createForExternalPluginHostingProcess();
             break;
 #endif
     }
